--- a/deno.jsonc
+++ b/deno.jsonc
@@ -26,7 +26,9 @@
     "preact/": "https://esm.sh/preact@10.19.2/",
     "@preact/signals": "https://esm.sh/*@preact/signals@1.2.1",
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.0",
-    "$std/": "https://deno.land/std@0.208.0/"
+    "$std/": "https://deno.land/std@0.208.0/",
+    "blockly": "https://esm.sh/blockly@10.3.0",
+    "#/": "./"
   },
   "compilerOptions": {
     "jsx": "react-jsx",
