add deno blocks icon
Credit: <https://twitter.com/_tanakaworld>
Hosted artwork URL: <https://deno.com/images/deno_logo_4.gif>, <https://deno.com/artwork#:~:text=Instagram-,Pixelated%20Deno,-tanakaworld>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,8 @@
   },
   "[javascript]": {
     "editor.defaultFormatter": "denoland.vscode-deno"
+  },
+  "[css]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   }
 }
