allow default kv path usage

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
-DENO_KV_PATH=""
+# This variable is the Deno Kv path for the deno_kv_oauth Fresh plugin.
+# DENO_KV_PATH=""
+
+# This variable should match the value of the DENO_KV_PATH variable.
+# MY_DENO_KV_PATH=""
+
 GITHUB_CLIENT_ID=""
 GITHUB_CLIENT_SECRET=""
 DEPLOY_ACCESS_TOKEN=""
