--- a/deno.jsonc
+++ b/deno.jsonc
@@ -4,9 +4,9 @@
     "check": "deno fmt --check && deno lint && deno check **/*.ts && deno check **/*.tsx",
     "cli": "echo \"import '\\$fresh/src/dev/cli.ts'\" | deno run --unstable -A -",
     "manifest": "deno task cli manifest $(pwd)",
-    "start": "deno run -A --env --unstable --watch=static/,routes/ dev.ts",
-    "build": "deno run -A --env --unstable dev.ts build",
-    "preview": "deno run -A --env --unstable main.ts",
+    "start": "deno run -A --unstable --watch=static/,routes/ dev.ts",
+    "build": "deno run -A --unstable dev.ts build",
+    "preview": "deno run -A --unstable main.ts",
     "update": "deno run -A -r https://fresh.deno.dev/update ."
   },
   "lint": { "rules": { "tags": ["fresh", "recommended"] } },
@@ -17,11 +17,14 @@
     "preact/": "https://esm.sh/preact@10.19.2/",
     "@preact/signals": "https://esm.sh/*@preact/signals@1.2.1",
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.0",
-    "$std/": "https://deno.land/std@0.208.0/",
+    "$std/": "https://deno.land/std@0.212.0/",
     "blockly": "https://esm.sh/blockly@10.3.0",
     "@blockly/theme-dark": "https://esm.sh/@blockly/theme-dark@6.0.5",
     "deno_kv_oauth/": "https://deno.land/x/deno_kv_oauth@v0.10.0/",
     "#/": "./"
   },
-  "compilerOptions": { "jsx": "react-jsx", "jsxImportSource": "preact" }
+  "compilerOptions": {
+    "jsx": "react-jsx",
+    "jsxImportSource": "preact"
+  }
 }
