--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,7 @@
-# This variable is the Deno Kv path for the deno_kv_oauth Fresh plugin.
+# This variable is the Deno Kv path.
 # DENO_KV_PATH=""
 
-# This variable should match the value of the DENO_KV_PATH variable.
-# MY_DENO_KV_PATH=""
-
+ENABLE_KV_INSIGHTS="true"
 GITHUB_CLIENT_ID=""
 GITHUB_CLIENT_SECRET=""
 DEPLOY_ACCESS_TOKEN=""
