--- a/deno.jsonc
+++ b/deno.jsonc
@@ -21,6 +21,8 @@
     "blockly": "https://esm.sh/blockly@10.3.0",
     "@blockly/theme-dark": "https://esm.sh/@blockly/theme-dark@6.0.5",
     "deno_kv_oauth/": "https://deno.land/x/deno_kv_oauth@v0.10.0/",
+    "deno_kv_insights/": "https://deno.land/x/deno_kv_insights@v0.8.0-beta/",
+    "boolean/": "https://deno.land/x/boolean@0.0.1/",
     "#/": "./"
   },
   "compilerOptions": {
