add GET and POST /projects api endpoints

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,7 @@
 ENABLE_KV_INSIGHTS="true"
 GITHUB_CLIENT_ID=""
 GITHUB_CLIENT_SECRET=""
+
+# TODO: Rename to SUBHOSTING_ORGANIZATION_ID and SUBHOSTING_ACCESS_TOKEN.
 DEPLOY_ACCESS_TOKEN=""
 DEPLOY_ORG_ID=""
