--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # This variable is the Deno Kv path.
 # DENO_KV_PATH=""
 
+PROD_DOMAIN="blocks.deno.dev"
 ENABLE_KV_INSIGHTS="true"
 GITHUB_CLIENT_ID=""
 GITHUB_CLIENT_SECRET=""
